--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "sanity": "^4.12.0",
+    "schema-dts": "^1.1.5",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
